[tool.poetry]
name = "passwordgenerator"
version = "0.1.0"
description = ""
authors = ["Rojer Du <rojerdu.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.0"
ruff = "^0.0.284"
pyfiglet = "^0.8.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
